All source code formatted using Java Coding Conventions, and imports organized with default settings.